Fix matrix interpolation between rotations of 180 degrees

In a previous cl (https://chromium-review.googlesource.com/526993), I
intentionally avoided interpolating decomposed rotation components
if they differed by 180 degrees (because this was ambiguous). This does
not match the spec (https://www.w3.org/TR/css-transforms-1/#interpolation-of-decomposed-3d-matrix-values)

This change reverts us to the previous rotation behavior.

BUG=739723

Review-Url: https://codereview.chromium.org/2971903005
Cr-Commit-Position: refs/heads/master@{#484678}

Former-commit-id: 799b4a3caeaaa5b99fea35d3ce3a96f7553b8f56